--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: GDG Event Notes
 description: Highlights and takeaways from the Google Developer Groups event.
+markdown: GFM
